--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,21 @@ navigation:
   - text: about
     url: about/
 
-  - text: blog
-    url: blog
+  - text: hcwym
+    url: hcwym/
+  - jekyll-mentions
+  - jemoji
+  - jekyll-redirect-from
+  - jekyll-sitemap
+  - jekyll-feed
+
+  - text: slothstories
+    url: slothstories/
+  - jekyll-mentions
+  - jemoji
+  - jekyll-redirect-from
+  - jekyll-sitemap
+  - jekyll-feed
 
   - text: bee
     url: bee_game
