--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,17 @@ navigation:
 
   - text: patreon
     url: patreon/
+  - jekyll-mentions
+  - jemoji
+  - jekyll-redirect-from
+  - jekyll-sitemap
+  - jekyll-feed
+
+  - text: thomas
+    url: thomas/
+
+  - text: julianne
+    url: julianne/
 
   - text: hcwym
     url: hcwym/
